Minor tweaks and fixes
Get rid of z-index from everything but progress bar by moving Tooltip down, and remove horizontal scrolling annoyance by killing the + 30 on the width of the graph. Also round the top / left positions to the nearest pixel.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,7 +2,7 @@ body {
   color: #262626;
   font-family: sans-serif;
   font-size: 14px;
-  padding: 50px 20px 30px;
+  padding: 40px 20px 30px;
 }
 
 a {
@@ -18,7 +18,6 @@ a:hover {
   text-align: center;
   margin-bottom: -10px;
   position: relative;
-  z-index: 1;
 }
 
 .IsItReadyText {
@@ -51,7 +50,7 @@ a:hover {
 }
 
 .Graph {
-  margin-bottom: 10px
+  margin: 0 0 10px 10px;
 }
 
 .HeatMap {
@@ -91,7 +90,6 @@ a:hover {
 .Tooltip {
   position: absolute;
   line-height: 1.3;
-  z-index: 1;
   pointer-events: none;
 }
 
@@ -106,7 +104,6 @@ a:hover {
   text-align: left;
   text-overflow: ellipsis;
   white-space: pre;
-  z-index: 1;
 }
 
 .Tooltip:after {
